		- Applied Patch #101321 - CZECH lang translation. Thanks Petr Moses <pmoses@users.sourceforge.net>
		- Now ISO 639 compliant with language translation id.
		- Applied Patch #101828 - Swedish lang translation.  Thanks Kjell Claesson <keyson@users.sourceforge.net>
		- Fixed group management with new groups and navbar problems.

[0.9.1] - Fixed a few missing variables with templates.
	    - editing a product in the inventory program now forwards you back to the category
		   you where in.
	    - You can now use decimals in the inventory program.
	    - Added missing tables for tts and fixed problems with postgresql.
	    - Fixed changing of password not getting set in session table
	    - email now displays "Could not open mailbox" if mailbox could
	      not be opened (formerly displayed just "mailbox empty")
	    - Added ability to add/edit product status (inventory)
    	- Fixed displaying of repeated calendar events by owner
	    - Fixed displaying of calendar events to include group events
	    - Converted more of the inventory program to use templates
	    - Added a search field/add button when list products (inventory)
	    - Fixed editing of calendar entry with regards to start time
	    - Fixed sorting order in navbar when apps where assigned to a group.
	    - Fixed groups not being assinged an app properly.
	    - Fixed timeout for email receiving/sending.
	    - Changed the format for the accounts, sessions, and preferences tables.
	    - Started adding support for Oracle databases (Not working yet)
	    - Added new layout for admin and preferences sections.
	    - Fixed addressbook entries assigned to groups.
	    - Fixed accounts not using link() properly and kicking admin out of searchs.
	    - Removed globalconfig.inc.php and moved it into the database.  Theres now a nice new
	      setup program.
	    - Updated docs a great deal.
	    - Group public items should now be working.
		- Fixed a wrong data type error when calling sort() on 1 folder.