@@ -14,8 +14,6 @@
 
   $phpgw_info["flags"] = array("noheader" => True, "nonavbar" => True, "currentapp" => "email");
   include("../header.inc.php");
-//   if (! $phpgw_info["user"]["permissions"]["addressbook"] || ! $phpgw_info["user"]["permissions"]["email"])
-//      badsession();
 
    if ($order)
       $ordermethod = "order by $order $sort";
